<resources>
    <string name="app_name">微腾</string>
    <string name="spending">消费记录</string>
    <string name="recharge">充值记录</string>
    <string name="change">转账记录</string>
    <string name="cash">提现记录</string>
    <string name="search">查找</string>
    <string name="yes">确定</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="url">http://weiteng.tdwebsite.cn/</string>

    <string name="btn_scroll_view">ScrollView demo</string>
    <string name="btn_list_view">ListView demo</string>

    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready"></string>
    <string name="header_hint_refresh_loading">正在刷新</string>
    <string name="header_hint_refresh_time"></string>
    <string name="footer_hint_load_normal"></string>
    <string name="footer_hint_load_ready"></string>
    <string name="no_record">您还没有此记录</string>
    <string name="no_net">网络刷新失败</string>
    <string name="record">记录</string>
    -<string-array name="main_tab_names">
        <item>首页</item>
        <item>商城</item>
        <item>记录</item>
        <item>我的</item>
</string-array>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
