<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="记录"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/bt_spending"
        android:layout_width="match_parent"
        android:padding="3dp"
        android:textSize="18sp"
        android:layout_margin="3dp"
        android:background="@color/bg_White"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/spending" />

    <Button
        android:id="@+id/bt_recharge"
        android:layout_width="match_parent"
        android:padding="3dp"
        android:textSize="18sp"
        android:layout_margin="3dp"
        android:background="@color/bg_White"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/recharge" />

    <Button
        android:id="@+id/bt_cash"

        android:layout_width="match_parent"
        android:padding="3dp"
        android:textSize="18sp"
        android:layout_margin="3dp"
        android:background="@color/bg_White"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/cash" />

    <Button
        android:id="@+id/bt_change"

        android:layout_width="match_parent"
        android:padding="3dp"
        android:textSize="18sp"
        android:layout_margin="3dp"
        android:background="@color/bg_White"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/change" />


</LinearLayout>